// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection tests create connection 1`] = `
Object {
  "Space": Object {
    "__typename": "Space",
    "people": Array [
      Object {
        "__typename": "Person",
        "connections": Array [
          Object {
            "__typename": "Connection",
            "event": Object {
              "__typename": "Event",
              "title": "test person",
            },
            "participants": Array [
              Object {
                "__typename": "Person",
                "title": "test person",
              },
              Object {
                "__typename": "Person",
                "title": "test person",
              },
            ],
          },
        ],
        "title": "test person",
      },
      Object {
        "__typename": "Person",
        "connections": Array [
          Object {
            "__typename": "Connection",
            "event": Object {
              "__typename": "Event",
              "title": "test person",
            },
            "participants": Array [
              Object {
                "__typename": "Person",
                "title": "test person",
              },
              Object {
                "__typename": "Person",
                "title": "test person",
              },
            ],
          },
        ],
        "title": "test person",
      },
    ],
  },
}
`;

exports[`Connection tests remove connection 1`] = `
Object {
  "Space": Object {
    "__typename": "Space",
    "people": Array [
      Object {
        "__typename": "Person",
        "connections": Array [],
        "title": "test person",
      },
      Object {
        "__typename": "Person",
        "connections": Array [],
        "title": "test person",
      },
    ],
  },
}
`;
